# arxiv-latex-mcp

./: .gitignore  .mcpbignore  README.md  THIRD_PARTY_NOTICES  arxiv-latex-mcp.py  manifest.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
arxiv_latex_mcp/: __main__.py  server.py
server/: main.py
