[project]
name = "arxiv-latex-mcp"
version = "0.2.1"
description = "An MCP server that fetches and processes arXiv papers using LaTeX source for accurate equation handling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "arxiv-to-prompt>=0.10.0",
]
